package io.yinqin.github.simpleFactory.service;

/**
 * 接口的定义
 *
 * @author YinQin
 * @version 1.0.0
 * @createDate 2023年11月28日
 * @since 1.0.0
 */
public interface Api {
    public void operation(String s);
}
